isitoFiles/authenticationPolicy.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "orenda-policy"
  namespace: "default"
spec:
  selector:
    matchLabels:
      app: reviews
  mtls:
    mode: STRICT
