isitoFiles/istioGateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orenda-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orenda
spec:
  hosts:
  - "*"
  gateways:
  - orenda-gateway
  http:
    - route:
      - destination:
          port:
            number: 3002
          host: frontend-service.default.svc.cluster.local         
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orenda-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: Orenda-ServiceEntry
spec:
  hosts:
  - "*"
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orenda-egress
spec:
  hosts:
  - "*"
  gateways:
  - orenda-egressgateway
  http:
  - match:
    - route:
      - destination:
          host: "*"
          port:
            number: 80
